Keep notebook accents unescaped

--- a/BORA&BOWv0.2.ipynb
+++ b/BORA&BOWv0.2.ipynb
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1. Preparaci\u00f3n del entorno"
+        "# 1. Preparación del entorno"
       ],
       "metadata": {
         "id": "CXOBm9wBGfa6"
@@ -65,8 +65,8 @@
       "cell_type": "markdown",
       "source": [
         "# 2. Descarga de PDFs de BORA\n",
-        "BORA genera PDFs de los boletines de cada d\u00eda.\n",
-        "La primera secci\u00f3n es la que hace menci\u00f3n a Legislaci\u00f3n y avisos oficiales"
+        "BORA genera PDFs de los boletines de cada día.\n",
+        "La primera sección es la que hace mención a Legislación y avisos oficiales"
       ],
       "metadata": {
         "id": "xq2mPz5yGlIj"
@@ -137,7 +137,7 @@
         "        filepath = os.path.join(self.download_folder, filename)\n",
         "\n",
         "        if os.path.exists(filepath):\n",
-        "            print(f\"\u2713 File already exists: {filename}\")\n",
+        "            print(f\"✓ File already exists: {filename}\")\n",
         "            return True\n",
         "\n",
         "        # Reset cookies so each download starts from the exported browser session\n",
@@ -164,7 +164,7 @@
         "        )\n",
         "\n",
         "        if date_page.status_code != 200:\n",
-        "            print(f\"\u2717 Failed to access date page for {date_str}: HTTP {date_page.status_code}\")\n",
+        "            print(f\"✗ Failed to access date page for {date_str}: HTTP {date_page.status_code}\")\n",
         "            return False\n",
         "\n",
         "        time.sleep(1)\n",
@@ -198,24 +198,24 @@
         "                    with open(filepath, 'wb') as f:\n",
         "                        f.write(pdf_data)\n",
         "\n",
-        "                    print(f\"\u2713 Downloaded: {filename} ({len(pdf_data)} bytes)\")\n",
+        "                    print(f\"✓ Downloaded: {filename} ({len(pdf_data)} bytes)\")\n",
         "                    return True\n",
         "                else:\n",
-        "                    print(f\"\u2717 No PDF available for {date_str}\")\n",
+        "                    print(f\"✗ No PDF available for {date_str}\")\n",
         "                    return False\n",
         "            else:\n",
-        "                print(f\"\u2717 HTTP {response.status_code} for {date_str}\")\n",
+        "                print(f\"✗ HTTP {response.status_code} for {date_str}\")\n",
         "                return False\n",
         "\n",
         "        except requests.exceptions.RequestException as e:\n",
-        "            print(f\"\u2717 Network error for {date_str}: {e}\")\n",
+        "            print(f\"✗ Network error for {date_str}: {e}\")\n",
         "            return False\n",
         "        except json.JSONDecodeError as e:\n",
-        "            print(f\"\u2717 JSON decode error for {date_str}: {e}\")\n",
+        "            print(f\"✗ JSON decode error for {date_str}: {e}\")\n",
         "            print(f\"Raw response: {response.text[:200]}...\")\n",
         "            return False\n",
         "        except Exception as e:\n",
-        "            print(f\"\u2717 Unexpected error for {date_str}: {e}\")\n",
+        "            print(f\"✗ Unexpected error for {date_str}: {e}\")\n",
         "            return False\n",
         "\n",
         "\n",
@@ -224,7 +224,7 @@
         "]\n",
         "\n",
         "# Usa las cookies exportadas del navegador (cookies.txt) para que el backend reciba la fecha correcta\n",
-        "# Tambi\u00e9n pod\u00e9s apuntar a cookies_20250108.txt si quer\u00e9s ese set espec\u00edfico.\n",
+        "# También podés apuntar a cookies_20250108.txt si querés ese set específico.\n",
         "downloader = BoletinDownloader(cookie_file=\"cookies.txt\")\n",
         "\n",
         "print(f\"Iniciando descarga de {len(fechas_objetivo)} fechas...\")\n",
@@ -233,7 +233,7 @@
         "    fecha_dt = datetime.strptime(fecha_str, \"%Y%m%d\")\n",
         "    downloader.download_section(\"primera\", fecha_dt)\n",
         "\n",
-        "print(\"\u2713 Proceso de descarga finalizado.\")\n"
+        "print(\"✓ Proceso de descarga finalizado.\")\n"
       ]
     },
     {
@@ -274,20 +274,20 @@
         "nlp = spacy.load(\"es_core_news_sm\")\n",
         "\n",
         "stop_words_adicionales = [\n",
-        "    'art\u00edculo', 'art', 'ley', 'nacional', 'decreto',\n",
-        "    'resoluci\u00f3n', 'disposici\u00f3n', 'expediente', 'anexo',\n",
-        "    'p\u00fablico', 'oficial', 'ministerio', 'bolet\u00edn',\n",
-        "    'direcci\u00f3n', 'secretar\u00eda', 'presente', 'fecha',\n",
+        "    'artículo', 'art', 'ley', 'nacional', 'decreto',\n",
+        "    'resolución', 'disposición', 'expediente', 'anexo',\n",
+        "    'público', 'oficial', 'ministerio', 'boletín',\n",
+        "    'dirección', 'secretaría', 'presente', 'fecha',\n",
         "    'buenos', 'aires', 'conforme', 'firma', 'administrativo',\n",
-        "    'conforme', 'establecido', 'medida', 'registro', 'regulaci\u00f3n',\n",
-        "    'modificatoria', 'secci\u00f3n', 'dispuesto', 'dictar'\n",
+        "    'conforme', 'establecido', 'medida', 'registro', 'regulación',\n",
+        "    'modificatoria', 'sección', 'dispuesto', 'dictar'\n",
         "]\n",
         "\n",
         "# Actualizamos el modelo de spaCy para que marque estas palabras como stop words\n",
         "for palabra in stop_words_adicionales:\n",
         "    # Agregamos la palabra tal cual\n",
         "    nlp.vocab[palabra].is_stop = True\n",
-        "    # Tambi\u00e9n es \u00fatil agregar la versi\u00f3n en min\u00fascula por las dudas\n",
+        "    # También es útil agregar la versión en minúscula por las dudas\n",
         "    nlp.vocab[palabra.lower()].is_stop = True\n"
       ],
       "metadata": {
@@ -334,10 +334,10 @@
         "lista_dfs = []\n",
         "carpeta_pdf = \"boletin_pdfs\"\n",
         "\n",
-        "print(\"Comenzando extracci\u00f3n de texto...\")\n",
+        "print(\"Comenzando extracción de texto...\")\n",
         "\n",
         "for fecha_str in fechas_objetivo:\n",
-        "    # Reconstruimos el nombre del archivo seg\u00fan la l\u00f3gica del downloader\n",
+        "    # Reconstruimos el nombre del archivo según la lógica del downloader\n",
         "    nombre_archivo = f\"seccion_primera_{fecha_str}.pdf\"\n",
         "    path_archivo = os.path.join(carpeta_pdf, nombre_archivo)\n",
         "\n",
@@ -346,22 +346,22 @@
         "            # Extraemos data\n",
         "            df_temp = extract_paragraphs_to_dataframe(path_archivo)\n",
         "\n",
-        "            # Agregamos columna de fecha para trazabilidad (\u00fatil si luego cambias de opini\u00f3n sobre agrupar)\n",
+        "            # Agregamos columna de fecha para trazabilidad (útil si luego cambias de opinión sobre agrupar)\n",
         "            df_temp['fecha_boletin'] = fecha_str\n",
         "\n",
         "            lista_dfs.append(df_temp)\n",
-        "            print(f\"\u2713 Procesado: {nombre_archivo} ({len(df_temp)} p\u00e1rrafos)\")\n",
+        "            print(f\"✓ Procesado: {nombre_archivo} ({len(df_temp)} párrafos)\")\n",
         "\n",
         "        except Exception as e:\n",
-        "            print(f\"\u26a0 Error leyendo {nombre_archivo}: {e}\")\n",
+        "            print(f\"⚠ Error leyendo {nombre_archivo}: {e}\")\n",
         "    else:\n",
-        "        # Esto pasa si era fin de semana o feriado y el archivo no se baj\u00f3\n",
+        "        # Esto pasa si era fin de semana o feriado y el archivo no se bajó\n",
         "        pass\n",
         "\n",
         "# Unimos todo en una sola bolsa\n",
         "if lista_dfs:\n",
         "    df_consolidado = pd.concat(lista_dfs, ignore_index=True)\n",
-        "    print(f\"\\nTOTAL: {len(df_consolidado)} p\u00e1rrafos extra\u00eddos de {len(lista_dfs)} documentos.\")\n",
+        "    print(f\"\\nTOTAL: {len(df_consolidado)} párrafos extraídos de {len(lista_dfs)} documentos.\")\n",
         "    print(df_consolidado.head())\n",
         "else:\n",
         "    print(\"Error: No se encontraron PDFs para procesar.\")"
@@ -456,7 +456,7 @@
         "    default_params = {\n",
         "        'max_features': top_n * 2,\n",
         "        'lowercase': True,\n",
-        "        'token_pattern': r'\\b[a-zA-Z\u00e1\u00e9\u00ed\u00f3\u00fa\u00f1\u00c1\u00c9\u00cd\u00d3\u00da\u00d1]+\\b'\n",
+        "        'token_pattern': r'\\b[a-zA-ZáéíóúñÁÉÍÓÚÑ]+\\b'\n",
         "    }\n",
         "    default_params.update(vectorizer_kwargs)\n",
         "\n",
@@ -510,7 +510,7 @@
         "        print(f\"PROCESSED: {processed[:150]}...\")\n",
         "\n",
         "        if 'original_word_count' in df.columns and 'processed_word_count' in df.columns:\n",
-        "            print(f\"Words: {df.iloc[i]['original_word_count']} \u2192 {df.iloc[i]['processed_word_count']}\")\n",
+        "            print(f\"Words: {df.iloc[i]['original_word_count']} → {df.iloc[i]['processed_word_count']}\")\n",
         "\n",
         "\n",
         "def process_paragraphs_dataframe(df_paragraphs, text_column='text'):\n",
@@ -570,7 +570,7 @@
         "\n",
         "    df_processed, top_words, stats = run_paragraphs_analysis_pipeline(df_consolidado)\n",
         "\n",
-        "    # Opcional: Ver si el top 20 cambia mucho al tener m\u00e1s fechas\n",
+        "    # Opcional: Ver si el top 20 cambia mucho al tener más fechas\n",
         "    print(\"\\nTop palabras del periodo completo:\")\n",
         "    print(top_words)\n",
         "else:\n",
@@ -608,8 +608,8 @@
       "source": [
         "from google.colab import files\n",
         "\n",
-        "# 1. Generamos el dataframe con TODAS las palabras (o un n\u00famero muy alto, ej: 10.000)\n",
-        "# Usamos tu funci\u00f3n existente 'create_bow_analysis' pero pedimos m\u00e1s palabras\n",
+        "# 1. Generamos el dataframe con TODAS las palabras (o un número muy alto, ej: 10.000)\n",
+        "# Usamos tu función existente 'create_bow_analysis' pero pedimos más palabras\n",
         "print(\"Generando reporte completo...\")\n",
         "df_frecuencias_full = create_bow_analysis(df_processed['processed_text'], top_n=10000)\n",
         "\n",
@@ -617,13 +617,13 @@
         "nombre_archivo = \"frecuencias_palabras_bora.csv\"\n",
         "\n",
         "# 3. Guardamos en CSV\n",
-        "# Usamos encoding='utf-8-sig' para que Excel reconozca bien los acentos (\u00f1, \u00e1, \u00e9...)\n",
+        "# Usamos encoding='utf-8-sig' para que Excel reconozca bien los acentos (ñ, á, é...)\n",
         "df_frecuencias_full.to_csv(nombre_archivo, index=False, encoding='utf-8-sig')\n",
         "\n",
         "# 4. Descargamos el archivo a tu PC\n",
         "files.download(nombre_archivo)\n",
         "\n",
-        "print(f\"\u2713 Archivo '{nombre_archivo}' generado y descargado.\")"
+        "print(f\"✓ Archivo '{nombre_archivo}' generado y descargado.\")"
       ],
       "metadata": {
         "colab": {
@@ -733,7 +733,7 @@
       "cell_type": "code",
       "source": [
         "# Dataframe de prueba\n",
-        "# Cambiar el pdf path al que se haya descargado en \ud83d\udcc1\n",
+        "# Cambiar el pdf path al que se haya descargado en 📁\n",
         "pdf_path = \"boletin_pdfs/seccion_primera_20251020.pdf\"\n",
         "with open(pdf_path, 'rb') as file:\n",
         "    pdf_reader = PyPDF2.PdfReader(file)\n",
